# C-juttuja-1

./: CMakeLists.txt  main.c
Week 1/: ex_2.c  ex_3.c
Week 2/: ex_4.c  ex_5.c  ex_6.c
Week 4/: ex_10.c  ex_11.c  ex_12.c
Week 5/: ex_13.c  ex_14.c
week 3/: ex_7.c  ex_8.c  ex_9.c
