cmake_minimum_required(VERSION 4.1)
project(exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(ex1  "Week 1/ex_1.c")
add_executable(ex2  "Week 1/ex_2.c")
add_executable(ex3  "Week 2/ex_3.c")
add_executable(ex4  "Week 2/ex_4.c")
add_executable(ex5  "Week 2/ex_5.c")
add_executable(ex6  "Week 2/ex_6.c")
add_executable(ex7  "Week 3/ex_7.c")
add_executable(ex8  "Week 3/ex_8.c")
add_executable(ex9  "Week 3/ex_9.c")
add_executable(ex10  "Week 4/ex_10.c")
add_executable(ex11  "Week  4/ex_11.c")